# ChangeLog for net-analyzer/tcptrack
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcptrack/ChangeLog,v 1.16 2007/09/06 18:40:40 jokey Exp $

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
  -files/tcptrack-1.1.5-gcc41.patch, -tcptrack-1.1.5.ebuild:
  Cleanup

  09 Jul 2007; Raúl Porcel <armin76@gentoo.org> tcptrack-1.2.0.ebuild:
  x86 stable

*tcptrack-1.2.0 (12 May 2007)

  12 May 2007; Cedric Krier <cedk@gentoo.org> metadata.xml,
  +tcptrack-1.2.0.ebuild:
  Version bump

  01 Jun 2006; Emanuele Giaquinta <exg@gentoo.org>
  +files/tcptrack-1.1.5-gcc41.patch, tcptrack-1.1.5.ebuild:
  Add patch for building with gcc-4.1.

  17 Feb 2006; Markus Ullmann <jokey@gentoo.org> tcptrack-1.1.5.ebuild:
  Removing virtual/libpcap wrt bug #117898

  09 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> -tcptrack-1.1.2.ebuild:
  Remove old ebuild.

  29 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> -tcptrack-1.1.1.ebuild,
  tcptrack-1.1.5.ebuild:
  Remove old version, marked 1.1.5 x86 stable.

*tcptrack-1.1.5 (22 Mar 2005)

  22 Mar 2005; Marcelo Goes <vanquirius@gentoo.org> +tcptrack-1.1.5.ebuild:
  Version bump.

  29 Jan 2005; Daniel Black <dragonheart@gentoo.org> tcptrack-1.1.1.ebuild,
  tcptrack-1.1.2.ebuild:
  changed net-libs/libpcap depend to virtual/libcap

  30 Jul 2004; Jon Hood <squinky86@gentoo.org> tcptrack-1.1.2.ebuild:
  Stable on x86.

  30 Jul 2004; Danny van Dyk <kugelfang@gentoo.org> tcptrack-1.1.2.ebuild:
  Marked ~amd64.

  09 Jul 2004; Eldad Zack <eldad@gentoo.org> tcptrack-1.1.1.ebuild:
  marked x86 stable

  30 Jun 2004; David Holm <dholm@gentoo.org> tcptrack-1.1.2.ebuild:
  Added to ~ppc.

*tcptrack-1.1.2 (29 Jun 2004)

  29 Jun 2004; Eldad Zack <eldad@gentoo.org> +tcptrack-1.1.2.ebuild:
  Version bump. Closes #54023

*tcptrack-1.1.1 (14 May 2004)

  14 May 2004; Jon Hood <squinky86@gentoo.org> +metadata.xml,
  +tcptrack-1.1.1.ebuild: