@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/tcptrack
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcptrack/ChangeLog,v 1.16 2007/09/06 18:40:40 jokey Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcptrack/ChangeLog,v 1.17 2008/03/31 17:29:52 cedk Exp $
+
+*tcptrack-1.3.0 (31 Mar 2008)
+
+  31 Mar 2008; Cédric Krier <cedk@gentoo.org> +tcptrack-1.3.0.ebuild:
+  Version bump
 
   06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
   -files/tcptrack-1.1.5-gcc41.patch, -tcptrack-1.1.5.ebuild:
